<resources>
    <string name="app_name">Portfolio</string>

    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock hawk project</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="make_your_app">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
    <string name="my_nanodegree_apps">My Nanodegree APPs</string>


</resources>
