<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="udacity.nanodegree.android.p0.MainActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    />


    <Button
        style="@style/button_style"
        android:id="@+id/pop_movies_button"
        android:text="@string/popular_movies"
        />

    <Button
        android:id="@+id/stock_hawk_button"
        style="@style/button_style"
        android:text="@string/stock_hawk"
        />

    <Button
        android:id="@+id/built_it_bigger_button"
        style="@style/button_style"
        android:text="@string/build_it_bigger"
        />

    <Button
        android:id="@+id/make_your_app_button"
        style="@style/button_style"
        android:text="@string/make_your_app"
        />

    <Button
        android:id="@+id/go_ubiquitous_button"
        style="@style/button_style"
        android:text="@string/go_ubiquitous"
        />

    <Button
        android:id="@+id/capstone_button"
        style="@style/button_style"
        android:text="@string/capstone"
        />


</LinearLayout>
